--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 
       <article class="profile-card">
+        <h1 class="sr-only">Profile:  Victor Crest</h1>
         <header>
           <img class="profile-card-image mb-3" src="./images/image-victor.jpg" alt="Victor">
 
